--- a/ConsoleApp5/ConsoleApp5.csproj
+++ b/ConsoleApp5/ConsoleApp5.csproj
@@ -43,11 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Line.cs" />
-    <Compile Include="Point.cs" />
+    <Compile Include="Classes\Circle.cs" />
+    <Compile Include="Classes\Line.cs" />
+    <Compile Include="Classes\Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rectangle.cs" />
+    <Compile Include="Classes\Rectangle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
